Optimize Spline for Immediate Loading

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Preload critical Spline scene -->
+    <link rel="preload" href="https://prod.spline.design/ObdplrnhvfU4hogz/scene.splinecode" as="fetch" crossorigin="anonymous">
+    <link rel="dns-prefetch" href="https://prod.spline.design">
     <title>NeonGhost Lab - Production React + TypeScript SPA with Spline + Lenis + GSAP</title>
   </head>
   <body>
